Fix: Project title and icon gap

--- a/src/main-page/main-style.css
+++ b/src/main-page/main-style.css
@@ -132,6 +132,9 @@
     margin-bottom: 0.8em;
     font-weight: 700;
     font-size: 1.5em;
+    .input-wrapper {
+      width: 100%;
+    }
     .title {
       width: 100%;
     }
